adicionando pagina de usuario com menu lateral

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -40,6 +40,7 @@
         <a href="#">Cadastro</a>
         <a href="#">Notificações</a>
         <a href="page_feed.html">Cadastrar Notícia</a>
+        <a href="paginaUsuario.html">Perfil</a>
         <a href="#">Sair</a>
       </nav>
 
