feat: adiciona favicon em todas as páginas

--- a/src/html/page_feed.html
+++ b/src/html/page_feed.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anuncie seu Evento</title>
   <link rel="stylesheet" href="../css/feed.css">
+  <link rel="icon" type="image/svg+xml" href="../img/logo-notific.svg" />
 </head>
 
 <body>
