--- a/src/html/home.html
+++ b/src/html/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>notifIC</title>
     <link rel="stylesheet" href="../css/home.css" />
+    <link rel="icon" type="image/svg+xml" href="../img/logo-notific.svg" />
   </head>
 
   <body>
