--- a/src/html/login.html
+++ b/src/html/login.html
@@ -3,18 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/login.css" />
+    <link rel="stylesheet" href="../css/auth.css" />
     <title>Login - Notific</title>
+    <link rel="icon" type="image/svg+xml" href="../img/logo-notific.svg" />
   </head>
   <body>
-    <div class="login-container">
+    <div class="auth-container">
       <div class="logo">
-
         <img src="../img/notific.svg" alt="Logo Notific" class="logo-img" />
         <p>Seu sistema de notificações eficiente</p>
-
       </div>
-      <div class="login-form">
+      <div class="auth-form">
         <h2>Acesse sua Conta</h2>
         <form action="/login" method="POST">
           <label for="email">Email</label>
@@ -36,8 +35,8 @@
           />
 
           <div class="links">
-            <a href="#">Criar Conta</a>
-            <a href="#">Esqueci minha senha</a>
+            <a href="registrar.html">Criar Conta</a>
+            <a href="recuperacaoSenha.html">Esqueci minha senha</a>
           </div>
           <button type="submit">Entrar</button>
         </form>
