--- a/src/html/news.html
+++ b/src/html/news.html
@@ -1,54 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>./NotifIC - Notícia</title>
-    <link rel="stylesheet" href="../css/news.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../css/news.css" />
+    <link rel="icon" type="image/svg+xml" href="../img/logo-notific.svg" />
+  </head>
+  <body>
     <header>
-        <h1>./notif<span class="logo-ic">IC</span></h1>
-        <a href="home.html" class="back-btn">← Voltar</a>
+      <h1>./notif<span class="logo-ic">IC</span></h1>
+      <a href="home.html" class="back-btn">← Voltar</a>
     </header>
     <main>
-        <div class="news-container" id="news">
-            <!-- Conteúdo dinâmico aqui -->
-        </div>
+      <div class="news-container" id="news">
+        <!-- Conteúdo dinâmico aqui -->
+      </div>
     </main>
     <script>
-        function getQueryParam(param) {
-            const urlParams = new URLSearchParams(window.location.search);
-            return urlParams.get(param);
-        }
+      function getQueryParam(param) {
+        const urlParams = new URLSearchParams(window.location.search);
+        return urlParams.get(param);
+      }
 
+      async function loadNews() {
+        const newsId = getQueryParam("id");
+        const newsDiv = document.getElementById("news");
+        try {
+          const response = await fetch("../json/news.json");
+          const newsList = await response.json();
+          const newsItem = newsList.find((n) => n.id == newsId);
 
-        async function loadNews() {
-            const newsId = getQueryParam('id');
-            const newsDiv = document.getElementById('news');
-            try {
-                const response = await fetch('../json/news.json');
-                const newsList = await response.json();
-                const newsItem = newsList.find(n => n.id == newsId);
+          if (!newsItem) {
+            newsDiv.innerHTML = `<p>Notícia não encontrada.</p>`;
+            return;
+          }
 
-                if (!newsItem) {
-                    newsDiv.innerHTML = `<p>Notícia não encontrada.</p>`;
-                    return;
-                }
-
-                newsDiv.innerHTML = `
+          newsDiv.innerHTML = `
                     <h2 class="news-title">${newsItem.title}</h2>
-                    <div class="news-meta">${newsItem.date || ''}</div>
-                    <img src="${newsItem.img}" alt="Imagem da notícia" class="news-img">
+                    <div class="news-meta">${newsItem.date || ""}</div>
+                    <img src="${
+                      newsItem.img
+                    }" alt="Imagem da notícia" class="news-img">
                     <p class="news-desc">${newsItem.desc}</p>
-                    ${newsItem.externalLink ? `<a href="${newsItem.externalLink}" target="_blank" class="subscribe-btn">Ir para o site</a>` : ""}
+                    ${
+                      newsItem.externalLink
+                        ? `<a href="${newsItem.externalLink}" target="_blank" class="subscribe-btn">Ir para o site</a>`
+                        : ""
+                    }
                 `;
-            } catch (e) {
-                newsDiv.innerHTML = `<p>Erro ao carregar notícia.</p>`;
-            }
+        } catch (e) {
+          newsDiv.innerHTML = `<p>Erro ao carregar notícia.</p>`;
         }
+      }
 
-        loadNews();
+      loadNews();
     </script>
-</body>
+  </body>
 </html>
