--- a/src/html/home.html
+++ b/src/html/home.html
@@ -17,7 +17,7 @@
         <img src="https://i.pravatar.cc/40" alt="Perfil" />
       </div>
       <form id="notificacaoForm">
-        <input type="text" placeholder="Digite seu número..." />
+        <input type="text" placeholder="Digite seu email..." />
         <button type="submit">Enviar</button>
       </form>
     </header>
@@ -40,11 +40,8 @@
       </header>
 
       <nav>
-        <a href="login.html">Login</a>
-        <a href="#">Cadastro</a>
-        <a href="#">Notificações</a>
-        <a href="page_feed.html">Cadastrar Notícia</a>
         <a href="paginaUsuario.html">Perfil</a>
+        <a href="page_feed.html">Cadastrar Notícia</a>
         <a href="#">Sair</a>
       </nav>
 
