--- a/src/html/home.html
+++ b/src/html/home.html
@@ -25,7 +25,7 @@
     <section class="banner">
       <img src="../img/banner_ic.png" alt="Banner" />
       <div class="banner-text">
-        <h1>./notif<span style="color: deepskyblue">IC</span></h1>
+        <h1>./notif<span style="color: #304b8a">IC</span></h1>
         <p>“Todos os caminhos levam a você.”</p>
         <input type="text" id="searchBar" placeholder="Pesquise no site..." />
       </div>
@@ -224,7 +224,7 @@
           // Usuário logado - mostra avatar circular com borda esférica
           profileButton.classList.add("logged");
           profileButton.classList.remove("not-logged");
-          menuTitle.textContent = "Perfil";
+          menuTitle.textContent = "./notifIC";
           console.log("Classe added: logged");
         } else {
           // Usuário não logado - mostra ícone com borda quadrada
