Notificado do Email

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -269,7 +269,7 @@
         const numeroCelular = this.querySelector("input").value;
 
         if (numeroCelular) {
-          alert(`Você receberá notificações via Email: ${numeroCelular}`);
+          alert(`Confirme seu email via Inbox para receber notificações: ${numeroCelular}`);
           this.querySelector("input").value = "";
         }
       });
