refactor: remove campo de matrícula do formulário de registro

--- a/src/html/registrar.html
+++ b/src/html/registrar.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/auth.css" />
     <link rel="icon" type="image/svg+xml" href="../img/logo-notific.svg" />
+    <meta name="description" content="Crie sua conta no NotifIC e centralize notificações e 
+    oportunidades do Instituto de Computação da UFAL em um só lugar." />
+
     <title>Criar Conta - Notific</title>
   </head>
   <body>
@@ -31,15 +34,6 @@
             id="email"
             name="email"
             placeholder="Digite seu email"
-            required
-          />
-
-          <label for="matricula">Matrícula</label>
-          <input
-            type="text"
-            id="matricula"
-            name="matricula"
-            placeholder="Digite sua matrícula"
             required
           />
 
