feat: adiciona meta tags SEO para melhorar indexação

--- a/src/html/login.html
+++ b/src/html/login.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="../css/auth.css" />
     <title>Login - Notific</title>
     <link rel="icon" type="image/svg+xml" href="../img/logo-notific.svg" />
+    <meta name="description" content="Acesse o NotifIC, sistema do Instituto de 
+    Computação da UFAL para gerenciar e centralizar notificações e oportunidades." />
   </head>
   <body>
     <div class="auth-container">
