--- a/src/html/recuperacaoSenha.html
+++ b/src/html/recuperacaoSenha.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/auth.css" />
     <link rel="icon" type="image/svg+xml" href="../img/logo-notific.svg" />
+    <meta name="description" content="Recupere o acesso ao NotifIC, o sistema do
+     Instituto de Computação da UFAL para centralizar notificações e oportunidades." />
     <title>Recuperação de Senha- Notific</title>
   </head>
   <body>
