aletração na pagina de usuario e no css perfil

--- a/src/html/paginaUsuario.html
+++ b/src/html/paginaUsuario.html
@@ -14,10 +14,8 @@
     <header class="main-header">
         <div id="profileButton">
             <img src="https://i.pravatar.cc/40" alt="Perfil" /> 
-        </div>
-        <div id = "homeButton">
-            <a href="home.html" class="back-btn">← Voltar</a>
-            </div>
+             </div>
+            <a href="home.html"><img src="../img/home_icon.png" alt="Home" class="home-icon"></a>  
     </header>
    
 <aside class="side-menu" id="sideMenu">
@@ -32,8 +30,6 @@
 
       <nav>
         <a href="login.html">Login</a>
-        <a href="#">Cadastro</a>
-        <a href="#">Notificações</a>
         <a href="page_feed.html">Cadastrar Notícia</a>
         <a href="paginaUsuario.html">Perfil</a>
         <a href="login.html">Sair</a>
@@ -43,9 +39,9 @@
     </aside>
 
         <div
-      class="side-menu-backdrop"
-      id="sideMenuBackdrop"
-      onclick="toggleMenu()"
+         class="side-menu-backdrop"
+        id="sideMenuBackdrop"
+        onclick="toggleMenu()"
     ></div>
 
     <main class="profile-container">
