--- a/src/html/home.html
+++ b/src/html/home.html
@@ -332,7 +332,7 @@
       }
 
       function verificarLogin() {
-        // Simulação - na implementação real, isso verifica se há um token de sessão
+        // Simulação - na implementação real, isso verifica se há um token de sesão
         usuarioLogado = Math.random() > 0.5;
         atualizarEstadoLogin();
       }
