--- a/src/html/paginaUsuario.html
+++ b/src/html/paginaUsuario.html
@@ -1,126 +1,129 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil do Usuário</title>
-    <link rel="icon" type="image/svg+xml" href="../img/logo-notific.svg" />
-    <link rel="stylesheet" href="../css/perfil.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Perfil do Usuário</title>
+  <link rel="icon" type="image/svg+xml" href="../img/logo-notific.svg" />
+  <link rel="stylesheet" href="../css/perfil.css" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+  />
 </head>
 
 <body>
-<!-- Header principal -->
-    <header class="main-header">
-        <div id="profileButton">
-            <img src="https://i.pravatar.cc/40" alt="Perfil" /> 
-             </div>
-            <a href="home.html"><img src="../img/home_icon.png" alt="Home" class="home-icon"></a>  
-    </header>
-   
-<aside class="side-menu" id="sideMenu">
-        <!-- Header do menu lateral -->
-        <header class="side-header">
-            <button class="close-btn" onclick="toggleMenu()">←</button>
-            <span class="menu-title">./notif<span style="color: deepskyblue">IC</span></span>
-            <nav class="navbar">
-                <h1>./notif<span class="logo-ic">IC</span></h1>
-            </nav>
-        </header>
+  <!-- Header principal -->
+  <header class="main-header">
+    <div id="profileButton" aria-label="Abrir menu lateral">
+      <img src="https://i.pravatar.cc/150" alt="Foto do perfil" />
+    </div>
+    <a href="home.html" class="home-link" title="Ir para a página inicial">
+      <img src="../img/home_icon.png" alt="Ícone Home" class="home-icon" />
+    </a>
+  </header>
 
-      <nav>
-        <a href="login.html">Login</a>
-        <a href="page_feed.html">Cadastrar Notícia</a>
-        <a href="paginaUsuario.html">Perfil</a>
-        <a href="login.html">Sair</a>
-      </nav>
+  <!-- Menu lateral -->
+  <aside class="side-menu" id="sideMenu" aria-hidden="true">
+    <div class="side-menu-header">
+      <button class="close-btn" onclick="toggleMenu()" aria-label="Fechar menu">←</button>
+      <span class="menu-title">./notif<span style="color: deepskyblue">IC</span></span>
+    </div>
 
-      <footer>© 2025 ./notifIC</footer>
-    </aside>
+    <nav class="side-nav">
+      <a href="home.html">Página Inicial</a>
+      <a href="page_feed.html">Cadastrar Notícia</a>
+      <a href="paginaUsuario.html" class="active">Perfil</a>
+      <a href="login.html">Sair</a>
+    </nav>
 
-        <div
-         class="side-menu-backdrop"
-        id="sideMenuBackdrop"
-        onclick="toggleMenu()"
-    ></div>
+    <footer class="side-footer">© 2025<br>./notifIC</footer>
+  </aside>
 
-    <main class="profile-container">
-        <div class="profile-content">
-            <div class="section-container profile-info-section">
-                <h2>Minhas Informações</h2>
-                <div class="profile-details">
-                    <div class="profile-avatar">
-                        <img id="profile-picture" src="https://via.placeholder.com/150/f0eafb/8e6fe5?text=Foto" alt="Foto de Perfil">
-                        <div class="avatar-actions">
-                            <button id="change-photo-btn">Mudar foto de perfil</button>
-                          <input type="file" id="photo-upload" accept="image/*" style="display: none;">
-                            <button id="choose-photo-btn">
-                                <i class="fas fa-upload"></i> Escolher foto
-                            </button>
-                        </div>
-                    </div>
-                    <div class="user-info-fields">
-                        <div class="info-group">
-                    <form>
-                            <label for="username">Nome de usuário</label>
-                            <input type="text" name="username" placeholder="Nome"/>
-                        </div>
-                        <div class="info-group">
-                            <label for="email">Email cadastrado</label>
-                            <input type="email" email="email" placeholder="Email:"/>
-                        </div>
-                        <div class="info-group">
-                            <label for="course">Curso</label>
-                            <input type="text" id="course" placeholder="Curso:"/>
-                        </div>
-                    </form>
-                    </div>
-                </div>
-            </div>
+  <!-- Fundo escuro do menu -->
+  <div class="side-menu-backdrop" id="sideMenuBackdrop" onclick="toggleMenu()"></div>
 
-            <div class="section-container notification-section">
-                <h2>Preferência de notificações</h2>
-                <div class="preferences-list">
-                    <div class="preference-item">
-                        <span>Eventos</span>
-                        <label class="switch">
-                            <input type="checkbox" checked>
-                            <span class="slider round"></span>
-                        </label>
-                    </div>
-                    <div class="preference-item">
-                        <span>Projetos</span>
-                        <label class="switch">
-                            <input type="checkbox" checked>
-                            <span class="slider round"></span>
-                        </label>
-                    </div>
-                    <div class="preference-item">
-                        <span>Vagas</span>
-                        <label class="switch">
-                            <input type="checkbox" checked>
-                            <span class="slider round"></span>
-                        </label>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
+  <!-- Conteúdo principal -->
+  <main class="profile-container">
+    <div class="profile-content">
+      <!-- Informações do usuário -->
+      <section class="section-container profile-info-section">
+        <h2>Minhas Informações</h2>
+        <div class="profile-details">
+          <div class="profile-avatar">
+            <img
+              id="profile-picture"
+              src="https://i.pravatar.cc/150"
+              alt="Foto de Perfil"
+            />
+            <div class="avatar-actions">
+              <button id="change-photo-btn" type="button">
+                <i class="fas fa-camera"></i> Mudar foto de perfil
+              </button>
+              <input type="file" id="photo-upload" accept="image/*" style="display: none;" />
+              <button id="choose-photo-btn" type="button">
+                <i class="fas fa-upload"></i> Escolher foto
+              </button>
+            </div>
+          </div>
 
-    <script src="script.js"></script>
-        <script>
-      // Função para abrir e fechar o menu
-      function toggleMenu() {
-        const sideMenu = document.getElementById("sideMenu");
-        const backdrop = document.getElementById("sideMenuBackdrop");
-        sideMenu.classList.toggle("active");
-        backdrop.classList.toggle("active");
-        // Impede a rolagem do corpo quando o menu está aberto
-        document.body.style.overflow = sideMenu.classList.contains("active") ? "hidden" : "";
-      }
+          <form class="user-info-fields">
+            <div class="info-group">
+              <label for="username">Nome de usuário</label>
+              <input type="text" id="username" name="username" placeholder="Nome" />
+            </div>
+            <div class="info-group">
+              <label for="email">Email cadastrado</label>
+              <input type="email" id="email" name="email" placeholder="Email" />
+            </div>
+          </form>
+        </div>
+      </section>
 
-      // Adicionar evento de clique ao botão de perfil
-      document.getElementById("profileButton").addEventListener("click", toggleMenu);
-    </script>
+      <!-- Preferências de notificações -->
+      <section class="section-container notification-section">
+        <h2>Preferências de Notificações</h2>
+        <div class="preferences-list">
+          <div class="preference-item">
+            <span>Eventos</span>
+            <label class="switch">
+              <input type="checkbox" checked />
+              <span class="slider round"></span>
+            </label>
+          </div>
+          <div class="preference-item">
+            <span>Projetos</span>
+            <label class="switch">
+              <input type="checkbox" checked />
+              <span class="slider round"></span>
+            </label>
+          </div>
+          <div class="preference-item">
+            <span>Vagas</span>
+            <label class="switch">
+              <input type="checkbox" checked />
+              <span class="slider round"></span>
+            </label>
+          </div>
+        </div>
+      </section>
+    </div>
+  </main>
+
+  <!-- Scripts -->
+  <script>
+    function toggleMenu() {
+      const sideMenu = document.getElementById("sideMenu");
+      const backdrop = document.getElementById("sideMenuBackdrop");
+      const isActive = sideMenu.classList.toggle("active");
+      backdrop.classList.toggle("active");
+      document.body.style.overflow = isActive ? "hidden" : "";
+      sideMenu.setAttribute("aria-hidden", !isActive);
+    }
+
+    document
+      .getElementById("profileButton")
+      .addEventListener("click", toggleMenu);
+  </script>
 </body>
 </html>
