--- a/src/html/paginaUsuario.html
+++ b/src/html/paginaUsuario.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Perfil do Usuário</title>
-  <link rel="icon" type="image/svg+xml" href="../img/notific.svg" />
+  <link rel="icon" type="image/svg+xml" href="../img/logo-notific.svg" />
   <link rel="stylesheet" href="../css/perfil.css" />
   <link
     rel="stylesheet"
@@ -19,7 +19,7 @@
       <img src="https://i.pravatar.cc/150" alt="Foto do perfil" />
     </div>
     <a href="home.html" class="home-link" title="Ir para a página inicial">
-      <img src="../img/home_icon.png" alt="Ícone Home" class="home-icon" />
+      <img src="../img/notific.svg" alt="Ícone Home" class="home-icon" />
     </a>
   </header>
 
