--- a/src/html/home.html
+++ b/src/html/home.html
@@ -10,26 +10,73 @@
 
   <body>
     <header>
-      <div id="profileButton">
-        <!-- Ícone padrão (não logado) -->
-        <span class="profile-icon" style="font-size: 24px">👤</span>
-        <!-- Imagem de perfil (logado) -->
-        <img src="https://i.pravatar.cc/40" alt="Perfil" />
-      </div>
-      <form id="notificacaoForm">
-        <input type="text" placeholder="Digite seu email..." />
-        <button type="submit">Enviar</button>
-      </form>
-    </header>
+  <div class="header-logo">
+    <a href="home.html"> <img src="../img/logoNotific.png" alt="Logo NotifIC" id="logo-img" />
+    </a>
+  </div>
 
-    <section class="banner">
-      <img src="../img/banner_ic.png" alt="Banner" />
-      <div class="banner-text">
-        <h1>./notif<span style="color: #304b8a">IC</span></h1>
-        <p>“Todos os caminhos levam a você.”</p>
-        <input type="text" id="searchBar" placeholder="Pesquise no site..." />
-      </div>
-    </section>
+  <div class="header-search-wrapper">
+    <svg
+      class="search-icon"
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 20 20"
+      fill="currentColor"
+    >
+      <path
+        fill-rule="evenodd"
+        d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z"
+        clip-rule="evenodd"
+      />
+    </svg>
+    <input
+      type="text"
+      id="searchBar"
+      placeholder="Buscar notícias..."
+    />
+  </div>
+
+  <div id="profileButton">
+    <span class="profile-icon">👤</span>
+    <img src="https://i.pravatar.cc/40" alt="Perfil" />
+  </div>
+</header>
+
+    <section class="hero-carousel">
+  <div class="carousel-container">
+
+    <div class="carousel-slides-wrapper"></div>
+
+    <button id="carousel-prev" class="carousel-nav-btn">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 20 20"
+        fill="currentColor"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M12.79 5.23a.75.75 0 010 1.06L9.06 10l3.73 3.71a.75.75 0 11-1.06 1.06l-4.25-4.25a.75.75 0 010-1.06l4.25-4.25a.75.75 0 011.06 0z"
+          clip-rule="evenodd"
+        />
+      </svg>
+    </button>
+    <button id="carousel-next" class="carousel-nav-btn">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 20 20"
+        fill="currentColor"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M7.21 14.77a.75.75 0 010-1.06L10.94 10 7.21 6.29a.75.75 0 111.06-1.06l4.25 4.25a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06 0z"
+          clip-rule="evenodd"
+        />
+      </svg>
+    </button>
+
+    <div class="carousel-dots"></div>
+
+  </div>
+</section>
 
     <aside class="side-menu" id="sideMenu">
       <header>
@@ -104,368 +151,7 @@
         </p>
       </div>
     </footer>
-
-    <script>
-      const tabs = document.querySelectorAll(".tab");
-      const feed = document.getElementById("feed");
-      const searchBar = document.getElementById("searchBar");
-      const notificacaoForm = document.getElementById("notificacaoForm");
-      const profileButton = document.getElementById("profileButton");
-      const filterBtn = document.getElementById("filterBtn");
-      const filterMenu = document.getElementById("filterMenu");
-      let activeTags = [];
-      let currentTab = "geral";
-      let usuarioLogado = true;
-
-      let data = [];
-
-      let isAdmin = true; // simulação: mude para false para esconder o botão
-
-      const adminBtn = document.getElementById("adminBtn");
-      const adminMenu = document.getElementById("adminMenu");
-
-      // Mostrar/ocultar botão admin
-      if (isAdmin) {
-        adminBtn.style.display = "inline-block";
-      }
-
-      // Menu de admin
-      adminBtn.addEventListener("click", (e) => {
-        e.stopPropagation();
-
-        // Fecha outros menus abertos
-        filterMenu.classList.remove("active");
-
-        // Alterna o menu admin
-        adminMenu.classList.toggle("active");
-
-        // Preenche o conteúdo do menu admin
-        if (adminMenu.classList.contains("active")) {
-          adminMenu.innerHTML = `
-            <h3>Opções Admin</h3>
-            <button onclick="mostrarModalLogin()">Tela de requerimento de Login</button>
-            <button onclick="alternarEstadoLogin()">Alternar Login</button>
-            <button onclick="mostrarPendentes()">Ver Pendentes</button>
-            <button onclick="fecharMenus()">Fechar</button>
-        `;
-
-          // Posiciona o menu próximo ao botão admin
-          const adminBtnRect = adminBtn.getBoundingClientRect();
-          adminMenu.style.top = `${adminBtnRect.bottom + window.scrollY}px`;
-          adminMenu.style.right = `${window.innerWidth - adminBtnRect.right}px`;
-        }
-      });
-
-      // Fechar menus ao clicar fora
-      document.addEventListener("click", (e) => {
-        if (!adminMenu.contains(e.target) && e.target !== adminBtn) {
-          adminMenu.classList.remove("active");
-        }
-        if (!filterMenu.contains(e.target) && e.target !== filterBtn) {
-          filterMenu.classList.remove("active");
-        }
-      });
-
-      // Função para fechar todos os menus
-      function fecharMenus() {
-        adminMenu.classList.remove("active");
-        filterMenu.classList.remove("active");
-      }
-
-      // Função para alternar estado de login
-      function alternarEstadoLogin() {
-        usuarioLogado = !usuarioLogado;
-        atualizarEstadoLogin();
-        alert(
-          `Estado de login alterado para: ${
-            usuarioLogado ? "LOGADO" : "DESLOGADO"
-          }`
-        );
-        atualizarEstadoLogin();
-        fecharMenus();
-      }
-
-      function mostrarPendentes() {
-        const modal = document.createElement("div");
-        modal.className = "modal-backdrop";
-        modal.innerHTML = `
-        <div class="modal-content">
-            <h3>Submissões Pendentes</h3>
-            <p>Notícia 1 <button>Aceitar</button> <button>Rejeitar</button></p>
-            <p>Notícia 2 <button>Aceitar</button> <button>Rejeitar</button></p>
-            <button class="modal-button" onclick="document.body.removeChild(this.parentElement.parentElement)">Fechar</button>
-        </div>
-    `;
-        document.body.appendChild(modal);
-        fecharMenus();
-      }
-
-      async function loadNews() {
-        try {
-          const res = await fetch("../json/homeNews.json");
-          data = await res.json();
-          render(currentTab, searchBar.value.toLowerCase());
-        } catch (e) {
-          feed.innerHTML = "<p>Erro ao carregar notícias.</p>";
-        }
-        renderFilterMenu();
-      }
-
-      let favoritos = [];
-
-      function atualizarEstadoLogin() {
-        const profileButton = document.getElementById("profileButton");
-        const menuTitle = document.querySelector("#sideMenu .menu-title");
-
-        console.log("Atualizando estado de login:", usuarioLogado);
-        console.log("Elemento profileButton:", profileButton);
-
-        if (usuarioLogado) {
-          // Usuário logado - mostra avatar circular com borda esférica
-          profileButton.classList.add("logged");
-          profileButton.classList.remove("not-logged");
-          menuTitle.textContent = "./notifIC";
-          console.log("Classe added: logged");
-        } else {
-          // Usuário não logado - mostra ícone com borda quadrada
-          profileButton.classList.remove("logged");
-          profileButton.classList.add("not-logged");
-          menuTitle.textContent = "Login";
-          favoritos = [];
-          render(currentTab, searchBar.value.toLowerCase());
-          console.log("Classe added: not-logged");
-        }
-
-        // Debug: verificar quais elementos estão visíveis
-        const img = profileButton.querySelector("img");
-        const icon = profileButton.querySelector(".profile-icon");
-        console.log("Imagem display:", window.getComputedStyle(img).display);
-        console.log("Ícone display:", window.getComputedStyle(icon).display);
-      }
-
-      function mostrarModalLogin() {
-        const modal = document.createElement("div");
-        modal.className = "modal-backdrop";
-
-        modal.innerHTML = `
-            <div class="modal-content">
-                <h3>Login Necessário</h3>
-                <p>Você deve fazer login antes de favoritar conteúdos.</p>
-                <button class="modal-button" id="fecharModal">Entendi</button>
-            </div>
-        `;
-
-        document.body.appendChild(modal);
-
-        modal
-          .querySelector("#fecharModal")
-          .addEventListener("click", function () {
-            document.body.removeChild(modal);
-          });
-      }
-
-      notificacaoForm.addEventListener("submit", function (e) {
-        e.preventDefault();
-        const numeroCelular = this.querySelector("input").value;
-
-        if (numeroCelular) {
-          alert(`Confirme seu email via Inbox para receber notificações: ${numeroCelular}`);
-          this.querySelector("input").value = "";
-        }
-      });
-
-      profileButton.addEventListener("click", () => {
-        if (usuarioLogado) {
-          // Se estiver logado, abre o menu lateral
-          sideMenu.classList.add("active");
-          sideMenuBackdrop.classList.add("active");
-        } else {
-          // Se não estiver logado, redireciona para a página de login
-          window.location.href = "login.html"; // Altere para o caminho correto da sua página de login
-        }
-      });
-
-      filterBtn.addEventListener("click", (e) => {
-        e.stopPropagation(); // Impede que o evento se propague
-
-        // Fecha o menu admin se estiver aberto
-        adminMenu.classList.remove("active");
-
-        // Abre o menu de filtro
-        renderFilterMenu();
-        filterMenu.classList.toggle("active");
-      });
-
-      // Gerar lista de tags únicas
-      function getAllTags() {
-        const allTags = new Set();
-        data.forEach((item) => item.tags?.forEach((t) => allTags.add(t)));
-        return [...allTags];
-      }
-
-      function renderFilterMenu() {
-        filterMenu.innerHTML = getAllTags()
-          .map(
-            (tag) => `
-        <span class="filter-tag ${
-          activeTags.includes(tag) ? "active" : ""
-        }" data-tag="${tag}">
-          ${tag}
-        </span>
-      `
-          )
-          .join("");
-
-        filterMenu.querySelectorAll(".filter-tag").forEach((el) => {
-          el.addEventListener("click", () => {
-            const tag = el.dataset.tag;
-            if (activeTags.includes(tag)) {
-              activeTags = activeTags.filter((t) => t !== tag);
-              el.classList.remove("active");
-            } else {
-              activeTags.push(tag);
-              el.classList.add("active");
-            }
-            render(currentTab, searchBar.value.toLowerCase());
-          });
-        });
-      }
-
-      function verificarLogin() {
-        // Simulação - na implementação real, isso verifica se há um token de sesão
-        usuarioLogado = Math.random() > 0.5;
-        atualizarEstadoLogin();
-      }
-
-      // Ajustar o render
-      function render(tab, query = "") {
-        feed.innerHTML = "";
-        let items;
-
-        if (tab === "pessoal") {
-          items = [...favoritos];
-        } else if (tab === "geral") {
-          items = [...data];
-        } else if (tab === "vagas") {
-          items = data.filter((item) => item.tags.includes("vagas"));
-        }
-
-        // filtro por busca
-        if (query) {
-          items = items.filter(
-            (item) =>
-              item.title.toLowerCase().includes(query) ||
-              item.desc.toLowerCase().includes(query)
-          );
-        }
-
-        // filtro por tags
-        if (activeTags.length) {
-          items = items.filter(
-            (item) =>
-              item.tags && activeTags.every((tag) => item.tags.includes(tag))
-          );
-        }
-
-        items.forEach((item) => {
-          const card = document.createElement("div");
-          card.className = "card";
-
-          const isFav = favoritos.some((f) => f.title === item.title);
-
-          let statusHTML = "";
-          let timerHTML = "";
-
-          if (item.tags.includes("vagas")) {
-            if (item.status === "aberta") {
-              statusHTML = `<span class="status aberta">ABERTA</span>`;
-              timerHTML = `<div class="timer" data-deadline="${item.deadline}"></div>`;
-            } else {
-              statusHTML = `<span class="status fechada">FECHADA</span>`;
-            }
-          }
-
-          let tagsHTML = "";
-          if (item.tags && item.tags.length) {
-            tagsHTML = `<div class="tags">${item.tags
-              .map((tag) => `<span class="tag">${tag}</span>`)
-              .join(" ")}</div>`;
-          }
-
-          card.innerHTML = `
-  <span class="favorite ${isFav ? "active" : ""}">★</span>
-  <img src="${item.img}" alt="">
-  <div>
-    <div class="card-header">
-      <h3>${item.title} ${statusHTML} ${tagsHTML}</h3>
-      ${timerHTML}
-    </div>
-    <p>${item.desc}</p>
-    <a href="${item.link}">Saiba mais...</a>
-  </div>
-`;
-
-          card.querySelector(".favorite").addEventListener("click", () => {
-            if (!usuarioLogado) {
-              mostrarModalLogin();
-              return;
-            }
-
-            if (isFav) {
-              favoritos = favoritos.filter((f) => f.title !== item.title);
-            } else {
-              favoritos.push(item);
-            }
-            render(tab, searchBar.value.toLowerCase());
-          });
-
-          feed.appendChild(card);
-        });
-
-        document.querySelectorAll(".timer").forEach((el) => {
-          const deadline = new Date(el.dataset.deadline);
-          function updateTimer() {
-            const diff = deadline - new Date();
-            if (diff <= 0) {
-              el.innerHTML = "Expirado";
-              return;
-            }
-            const h = Math.floor(diff / 1000 / 3600);
-            const m = Math.floor(((diff / 1000) % 3600) / 60);
-            const s = Math.floor((diff / 1000) % 60);
-            el.innerHTML = `Encerra em: ${h}h ${m}m ${s}s`;
-          }
-          updateTimer();
-          setInterval(updateTimer, 1000);
-        });
-      }
-
-      tabs.forEach((tab) => {
-        tab.addEventListener("click", () => {
-          document.querySelector(".tab.active").classList.remove("active");
-          tab.classList.add("active");
-          currentTab = tab.dataset.tab;
-          render(currentTab, searchBar.value.toLowerCase());
-        });
-      });
-
-      searchBar.addEventListener("input", () => {
-        render(currentTab, searchBar.value.toLowerCase());
-      });
-
-      function toggleMenu() {
-        sideMenu.classList.toggle("active");
-        sideMenuBackdrop.classList.toggle("active");
-
-        // Impede a rolagem do corpo quando o menu está aberto
-        document.body.style.overflow = sideMenu.classList.contains("active")
-          ? "hidden"
-          : "";
-      }
-
-      // Inicializar
-      loadNews();
-      verificarLogin();
-    </script>
+      
+    <script src="../javascript/home.js" defer></script>
   </body>
 </html>
