Adição de página, estilo e pedidos de exemplo

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -177,7 +177,7 @@
     }
 
     function Painel() {
-    window.location.href = "painel_administrador.html";
+    window.location.href = "pedidos.html";
     }
 
     function mostrarPendentes() {
