--- a/src/html/pedidos.html
+++ b/src/html/pedidos.html
@@ -29,7 +29,7 @@
         <img src="../img/easy.jpeg" alt="Imagem do Pedido" class="pedido-imagem">
         
         <div class="pedido-conteudo">
-          <h3 class="pedido-titulo">Pedido - Maria Oliveira</h3>
+          <h3 class="pedido-titulo">Maria Oliveira</h3>
           <p class="pedido-info"><strong>Data:</strong> 28/10/2025</p>
           <p class="pedido-info"><strong>Item:</strong> Anúncio de processo seletivo EASY</p>
           
@@ -54,11 +54,11 @@
       </div>
 
       <div class="pedido-card">
-        <img src="https://i.pravatar.cc/300?img=3" alt="Imagem do Pedido" class="pedido-imagem">
+        <img src="https://i.pinimg.com/736x/73/cf/ae/73cfaeec1236054f05e6bfd2eab0fed8.jpg" alt="Imagem do Pedido" class="pedido-imagem">
         <div class="pedido-conteudo">
           <h3 class="pedido-titulo">IC/UFAL</h3>
           <p class="pedido-info"><strong>Data:</strong> 27/10/2025</p>
-          <p class="pedido-info"><strong>Item:</strong> Notícia "Alunos vencem maratona."</p>
+          <p class="pedido-info"><strong>Item:</strong> Maratona de computação"</p>
           <div class="pedido-acoes">
             <button class="btn-aceitar">Aceitar</button>
             <button class="btn-rejeitar">Rejeitar</button>
