atualização do design do home

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -12,7 +12,7 @@
       <div class="header-logo">
         <a href="home.html">
           <img
-            src="../img/logoNotific.png"
+            src="../img/notific.svg"
             alt="Logo NotifIC"
             id="logo-img"
           />
