--- a/src/html/paginaUsuario.html
+++ b/src/html/paginaUsuario.html
@@ -18,9 +18,9 @@
     <div id="profileButton" aria-label="Abrir menu lateral">
       <img src="https://i.pravatar.cc/150" alt="Foto do perfil" />
     </div>
-    <a href="home.html" class="home-link" title="Ir para a página inicial">
-      <img src="../img/notific.svg" alt="Ícone Home" class="home-icon" />
-    </a>
+    
+      <img src="../img/notific.svg" alt="Icone do notifIC" class="logo-IC" />
+    
   </header>
 
   <!-- Menu Dropdown -->
