alguns consertos basicos

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -78,7 +78,7 @@
 
     <aside class="side-menu" id="sideMenu">
       <header>
-        <button class="close-btn" onclick="toggleMenu()">←</button>
+        <button class="close-btn" onclick="toggleMenu()">→</button>
         <span class="menu-title"
           >./notif<span style="color: deepskyblue">IC</span></span
         >
@@ -132,7 +132,7 @@
         <h4>Links Rápidos</h4>
         <p>
           <a href="page_feed.html">Anuncie no site</a><br />
-          <a href="#">Contate-nos</a><br />
+          <a href="painel_administrador.html">Contate-nos</a><br />
           <a href="#">Reportar problema</a>
         </p>
       </div>
