--- a/src/html/paginaUsuario.html
+++ b/src/html/paginaUsuario.html
@@ -19,7 +19,9 @@
       <img src="https://i.pravatar.cc/150" alt="Foto do perfil" />
     </div>
     
-      <img src="../img/notific.svg" alt="Icone do notifIC" class="logo-IC" />
+   <a href="home.html">
+  <img src="../img/notific.svg" alt="Ícone do notifIC" class="logo-IC" />
+</a>
     
   </header>
 
