Separação dos JavaScript

--- a/src/html/paginaUsuario.html
+++ b/src/html/paginaUsuario.html
@@ -130,54 +130,6 @@
       </div>
     </main>
 
-    <!-- script para o menu dropdown -->
-    <script>
-      function toggleMenu() {
-        const dropdownMenu = document.getElementById("dropdownMenu");
-        const isActive = dropdownMenu.classList.toggle("active");
-
-        // Fecha o menu ao clicar fora dele
-        if (isActive) {
-          document.addEventListener("click", closeMenuOnClickOutside);
-        } else {
-          document.removeEventListener("click", closeMenuOnClickOutside);
-        }
-
-        dropdownMenu.setAttribute("aria-hidden", !isActive);
-      }
-
-      function closeMenuOnClickOutside(event) {
-        const dropdownMenu = document.getElementById("dropdownMenu");
-        const profileButton = document.getElementById("profileButton");
-
-        // Se o clique foi fora do menu e fora do botão, fecha o menu
-        if (
-          !dropdownMenu.contains(event.target) &&
-          !profileButton.contains(event.target)
-        ) {
-          dropdownMenu.classList.remove("active");
-          dropdownMenu.setAttribute("aria-hidden", "true");
-          document.removeEventListener("click", closeMenuOnClickOutside);
-        }
-      }
-
-      // Adiciona o event listener ao botão de perfil
-      document
-        .getElementById("profileButton")
-        .addEventListener("click", function (event) {
-          event.stopPropagation(); // Impede que o clique propague para o document
-          toggleMenu();
-        });
-
-      // Fecha o menu ao pressionar ESC
-      document.addEventListener("keydown", function (event) {
-        if (event.key === "Escape") {
-          const dropdownMenu = document.getElementById("dropdownMenu");
-          dropdownMenu.classList.remove("active");
-          dropdownMenu.setAttribute("aria-hidden", "true");
-          document.removeEventListener("click", closeMenuOnClickOutside);
-        }
-      });
-    </script>
+    <script src="../js/perfil.js"></script>
   </body>
 </html>
