Static Folder para o Flask

--- a/src/html/login.html
+++ b/src/html/login.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/auth.css" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}" />
     <title>Login - Notific</title>
-    <link rel="icon" type="image/svg+xml" href="../img/logo-notific.svg" />
+  <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='img/logo-notific.svg') }}" />
     <meta name="description" content="Acesse o NotifIC, sistema do Instituto de 
     Computação da UFAL para gerenciar e centralizar notificações e oportunidades." />
   </head>
   <body>
     <div class="auth-container">
       <div class="logo">
-        <img src="../img/notific.svg" alt="Logo Notific" class="logo-img" />
+  <img src="{{ url_for('static', filename='img/notific.svg') }}" alt="Logo Notific" class="logo-img" />
         <p>Seu sistema de notificações eficiente</p>
       </div>
       
