espaçamento da página de pedidos de pendentes

--- a/src/html/admin.html
+++ b/src/html/admin.html
@@ -43,7 +43,7 @@
 
       <div class="pedido-acoes">
               <button id="btnBanir" class="btn-rejeitar">Banir Usuário</button>
-              <button id="btnMembro" class="btn-aceitar">Tornar Membro</button>
+              <button id="btnMembro" class="btn-aceitar">Tornar Moderador</button>
               <button id="btnExcluir" class="btn-rejeitar">Excluir Anúncio</button>
             </div>
     </section>
