--- a/src/html/login.html
+++ b/src/html/login.html
@@ -48,6 +48,6 @@
       </div>
     </div>
 
-    <script src="../javascript/auth.js"></script>
+  <script src="{{ url_for('static', filename='javascript/auth.js') }}"></script>
   </body>
 </html>
